data/derived/fa15/progs/unify/prog0243.ml.out
Characters 66-67:
  | (h,t) -> if t = true then t;;
                              ^
Error: This expression has type bool but an expression was expected of type
         unit
